2019-1/231/users/4226/executions/1651_2711.log
== TEST (2019-04-09 18:56:20) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = (RU*pRU) + (PS*pPS)

if (vf >= vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
-- OUTPUT:
10.0045
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:56:31) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = (RU*pRU) + (PS*pPS)

if (vf >= vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:56:46) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = (RU*pRU) + (PS*pPS)

if (vf >= vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:57:06) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = (RU*pRU) + (PS*pPS)

if (vf >= vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- EXECUTION TIME:
0.249533
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:58:03) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = (RU*pRU) + (PS*pPS)

if (vf >= vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:58:31) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = (RU*pRU) + (PS*pPS)

if (vf >== vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- ERROR:
File "XXXX", line 11
    if (vf >== vd):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:58:46) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = float((RU*pRU) + (PS*pPS))

if (vf >= vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:00:24) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = float((RU*pRU) + (PS*pPS))

if (vf >= vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- EXECUTION TIME:
0.163739
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:00:38) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = float((RU*pRU) + (PS*pPS))

if (vf >= vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:04) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = float((RU*pRU) + (PS*pPS))

if (vf > vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
print(msg)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:42) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = float((RU*pRU) + (PS*pPS))

if (vf > vd):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
	
print(msg)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:02:25) 
-- CODE:
vd = float(input("valor disponivel: "))

RU = int(input("tickets do RU: "))
pRU = float(input("valor do ticket: "))

PS = int(input("passes de onibus: "))
pPS = float(input("valor do passe: "))

vf = float((RU*pRU) + (PS*pPS))

if (vf < vd):
	msg = "SUFICIENTE"
	
else:
	msg = "INSUFICIENTE"
	
print(msg)
-- EXECUTION TIME:
0.13117
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
